[package]
name = "cliup"
version = "0.1.3"
edition = "2021"
description = "A small macOS CLI updater for a whitelisted set of developer tools"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
